@@ -1103,6 +1103,19 @@ operator|+
 literal|"proto=.*"
 argument_list|)
 decl_stmt|;
+DECL|field|numMissingBlocksPattern
+specifier|static
+specifier|final
+name|Pattern
+name|numMissingBlocksPattern
+init|=
+name|Pattern
+operator|.
+name|compile
+argument_list|(
+literal|".*Missing blocks:\t\t([0123456789]*).*"
+argument_list|)
+decl_stmt|;
 DECL|field|numCorruptBlocksPattern
 specifier|static
 specifier|final
@@ -2831,6 +2844,11 @@ literal|"/"
 argument_list|)
 expr_stmt|;
 name|String
+name|numMissing
+init|=
+literal|null
+decl_stmt|;
+name|String
 name|numCorrupt
 init|=
 literal|null
@@ -2851,13 +2869,40 @@ block|{
 name|Matcher
 name|m
 init|=
-name|numCorruptBlocksPattern
+name|numMissingBlocksPattern
 operator|.
 name|matcher
 argument_list|(
 name|line
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|m
+operator|.
+name|matches
+argument_list|()
+condition|)
+block|{
+name|numMissing
+operator|=
+name|m
+operator|.
+name|group
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
+name|m
+operator|=
+name|numCorruptBlocksPattern
+operator|.
+name|matcher
+argument_list|(
+name|line
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 name|m
@@ -2875,11 +2920,27 @@ argument_list|(
 literal|1
 argument_list|)
 expr_stmt|;
+block|}
+if|if
+condition|(
+name|numMissing
+operator|!=
+literal|null
+operator|&&
+name|numCorrupt
+operator|!=
+literal|null
+condition|)
+block|{
 break|break;
 block|}
 block|}
 if|if
 condition|(
+name|numMissing
+operator|==
+literal|null
+operator|||
 name|numCorrupt
 operator|==
 literal|null
@@ -2889,15 +2950,15 @@ throw|throw
 operator|new
 name|IOException
 argument_list|(
-literal|"failed to find number of corrupt "
+literal|"failed to find number of missing or corrupt"
 operator|+
-literal|"blocks in fsck output."
+literal|" blocks in fsck output."
 argument_list|)
 throw|;
 block|}
 if|if
 condition|(
-name|numCorrupt
+name|numMissing
 operator|.
 name|equals
 argument_list|(
@@ -2910,6 +2971,21 @@ argument_list|)
 argument_list|)
 condition|)
 block|{
+name|assertTrue
+argument_list|(
+name|numCorrupt
+operator|.
+name|equals
+argument_list|(
+name|Integer
+operator|.
+name|toString
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|assertTrue
 argument_list|(
 name|outStr
